--- a/spring-boot-web/src/main/resources/application.properties
+++ b/spring-boot-web/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+texto.idexcontroller.index.titulo: Hola Spring Framework
+texto.idexcontroller.perfil.titulo: Perfil del usuario: 
+texto.idexcontroller.listar.titulo: Listado de usuarios
