Cambiar Datasource a MySQL

--- a/spring-boot-data-jpa/src/main/resources/application.properties
+++ b/spring-boot-data-jpa/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-# Datos por defecto
-# URL de la consola de H2: http://localhost:8080/h2-console/
-# Nombre de la base de datos: testdb
-# Usuario de la base de datos: sa
-# Sin contraseña
-spring.h2.console.enabled=true
-
-# Datos personalizados
-spring.datasource.url=jdbc:h2:mem:clientesdb
-spring.datasource.username=cjgmj
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot?useSSL=false&serverTimezone=Europe/Madrid
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
