--- a/spring-boot-data-jpa/pom.xml
+++ b/spring-boot-data-jpa/pom.xml
@@ -90,6 +90,12 @@
 			<artifactId>super-csv</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+
+		<!-- XML -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
